--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--Bluetooth Activity-->
+        <activity
+            android:name="com.example.coleattendanceproject.BluetoothActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name="com.example.coleattendanceproject.SettingActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
