--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name="com.example.coleattendanceproject.SettingActivity"
+            android:name="com.example.coleattendanceproject.SettingsActivity"
             android:label="@string/app_name">
         </activity>
     </application>
