--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--Settings Activity-->
+        <!--Bluetooth Activity-->
+        <activity
+            android:name="com.example.coleattendanceproject.BluetoothActivity"
+            android:label="@string/app_name">
+        </activity>
         <activity
             android:name="com.example.coleattendanceproject.SettingsActivity"
             android:label="@string/app_name">
